# CppProtobufBasic

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: superlinter.yml
proto/: CMakeLists.txt  example.proto
src/: main.cpp
